# feeling-journal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker_compose_up.sh  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
feeling/: .env.example
feeling/authentication/: admin.py  forms.py  models.py  urls.py  views.py
feeling/authentication/migrations/: 0001_initial.py
feeling/authentication/tests/: factories.py
feeling/core/: settings.py  urls.py
feeling/static/css/: report-pdf.css
feeling/static/js/: chartjs-adapter-moment.min.js
feeling/templates/: index.html
feeling/templates/accounts/: login.html  profile.html  register.html
feeling/templates/common/: add.html  delete.html  edit.html  list.html
feeling/templates/cue/: report-pdf.html
feeling/templates/export/: index.html
feeling/templates/habit/: list.html  report-pdf.html
feeling/templates/includes/: date_filter.html  dropdown_pagination.html  footer.html  navigation.html  scripts.html  sidebar.html
feeling/templates/journal/: journal.csv  list.html  report-pdf.html
feeling/templates/layouts/: base.html  report-pdf.html
feeling/templates/reward/: report-pdf.html
feeling/templates/routine/: report-pdf.html
feeling/templates/save/: index.html
feeling/templates/statistics/: index.html
feeling/templates/thought/: list.html  report-pdf.html  thought.csv
feeling/web/: admin.py  forms.py  models.py  urls.py
feeling/web/migrations/: 0001_initial.py  0002_cue_routine_reward_habit.py
nginx/: Dockerfile  nginx.conf
(+16 files in other folders)
